fixed weird layout problems

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,16 +1,17 @@
 /* Logo Font */
-#logo {
-  font-family: 'Baloo 2', cursive;
-}
+
 h1, h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
+}
+h1 {
+  font-size: clamp(1.8rem, 3vw, 3rem);
 }
 /* Try using rubik and work sans as well*/
 p, li, a, button {
   font-family: 'Open Sans', sans-serif;
 }
 p {
-  font-size: clamp(1.0rem, 3vw, 1.1rem);
+  font-size: clamp(1.0rem, 3vw, 1.4rem);
   line-height: 1.3;
   max-width: 60ch;
 }
@@ -19,10 +20,10 @@ p {
 a {
   color: var(--black);
   line-height: 2;
-  font-size: clamp(1.2rem, 3vw, 1.6rem);
+  font-size: clamp(1rem, 3vw, 1.6rem);
 }
 .desktop-login {
-  font-size: clamp(0.8rem, 3vw, 1rem);
+  font-size: clamp(0.8rem, 3vw, 1.6rem);
 }
 /* Material Icons */
 .material-icons {
@@ -49,19 +50,4 @@ a {
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
-/* Customizing icon sizes */
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
 
-/* ----- Lava Pad Icons ------ */
-.text-logo {
-  min-width: 86px;
-  max-width: 128px;
-}
-.hero-tile-icon {
-  max-width: 256px;
-}
-.mountain {
-}
