--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 :root {
   /*default colors*/
   --black: hsla(0, 10%, 12%, 1);
-  --white: hsl(351, 100%, 97%);
+  --white: hsl(352, 6%, 100%);
   --light-grey: hsl(0, 0%, 71%);
   --dark-grey: hsl(0, 2%, 28%);
   --red: hsla(1, 77%, 55%, 1);
@@ -14,6 +14,7 @@
   --hover-shadow: 0 14px 25px hsla(0, 10%, 12%, 0.24), 0 10px 10px hsla(0, 10%, 12%, 0.24);
   --shadow-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+
 /* ----------- */
 /* Site Layout */
 /* ----------- */
@@ -26,23 +27,6 @@
   flex-direction: column;
 }
 
-/* Grid Support */
-@supports (display:grid) {
-  /* Page Layout */
-  .site-wrapper {
-    margin: 0;
-    display: grid; 
-    grid-gap: 10px;
-    grid-auto-flow: row;
-  }
-  /* Page Layout Grid */
-  .hero-wrapper, .content-wrapper, .footer-wrapper {
-    grid: 1 / -1;
-  }
-}
-
-
-/* Site Elements Basic Settings */
 .header-wrapper {
   display: flex;
   flex-direction: column;
@@ -52,16 +36,13 @@
 
 .content-wrapper {
   margin: 0;
-  min-height: 65vh;
-  max-width: 100vw;
+  height: 100vh;
 
   /* for non grid support*/
   flex-grow: 1;
 
-  /* grid layout */
-  display: grid;
-  justify-content: center;
 }
+
 .footer-wrapper {
   background-color: var(--black);
   color: var(--light-grey);
@@ -73,15 +54,35 @@
   align-items: flex-end;
 }
 
-@supports (display:grid) {
+
+/* Grid Support */
+/* This is to prep for adding a more complex layout including a sidebar later */
+@supports (display: grid) {
+   /*Page Layout Grid */
+   .site-wrapper {
+  display: grid; 
+  grid-gap: 10px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-auto-flow: row;
+  }
+  /* Page Layout Grid */
+  .hero-wrapper, .content-wrapper, .footer-wrapper {
+    grid: 1 / -1;
+  }
+  /* Navigation Grid */
   .nav-wrapper {
     padding: 20px;
     max-width: 100%;
     display: grid;
-    grid-template-columns: min-content 2fr repeat(2, minmax(48, 70px));
+    grid-template-columns: minmax(128px, 256px) 1fr minmax(48px, 128px);
     align-items: center;
   }
 }
+
+/* ***************** */
+/* NAVIGATION MOBILE */
+/* ***************** */
 
 /* Nav classes mobile */
 .desktop-links, .desktop-shop {
@@ -124,6 +125,7 @@
   background-color: var(--red);
   color: var(--light-grey);
 }
+
 #mobile-nav-close {
   color: var(--white);
   justify-self: flex-start;
@@ -143,17 +145,19 @@
   grid-column: 3 / 4;
   grid-row: 1;
 }
+
 #nav-btn-mobile:hover, #nav-btn-mobile:active {
   transform: scale(1.2);
 }
+
 .mobile-shop {
-  /* reduce for mobile button */
   /* nav position*/
   align-self: start;
   justify-self: end;
   grid-column: 4;
   grid-row: 1;
 }
+
 .mobile-shop > button {
 
   box-shadow: var(--inactive-shadow);
@@ -170,9 +174,11 @@
 .mobile-shop > button:hover, .mobile-shop > button:active {
   box-shadow: var(--hover-shadow);
 }
-/* nav home text icon */
 
+/* *********** */
 /* hero layout */
+/* *********** */
+
 /* hero logo */
 .hero-icon {
   border-radius: 25px;
@@ -183,11 +189,12 @@
 .hero-icon:hover {
   box-shadow: var(--hover-shadow);
 }
+
 /* -------------- */
 /* Desktop Layout */
-/* Keept his below mobile declarations */
 /* -------------- */
 @media screen and (min-width: 600px) {
+
   /* Desktop Navigation */
   .nav-wrapper {
     grid-gap: 10px;
@@ -195,19 +202,22 @@
   .desktop-links {
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
 
-    margin: 0 0 0 3rem;
   }
+
   .desktop-links > a {
     margin: 0rem 1rem;
 
     transform: scale(1);
     transition: var(--shadow-transition);
   }
+  /* Desktop Link animation */
   .desktop-links > a:hover {
     transform: scale(1.2);
     color: var(--red);
   }
+  /* Desktop Shop Styling */
   .desktop-shop {
     display: flex;
     flex-direction: row;
@@ -219,60 +229,64 @@
   .desktop-shop > * {
     margin: 0 10px;
   }
+  /* login link */
   .desktop-shop > :nth-child(1) {
-  transform: scale(1);
-  transition: var(--shadow-transition);
-  justify-self: end;
+    transform: scale(1);
+    transition: var(--shadow-transition);
+    justify-self: end;
   }
+
   .desktop-shop > :nth-child(1):hover {
     transform: scale(1.2);
   }
+
   .desktop-shop button {
     min-width: 10px;
     cursor: pointer;
-  box-shadow: var(--inactive-shadow);
-  transition: var(--shadow-transition);
+    box-shadow: var(--inactive-shadow);
+    transition: var(--shadow-transition);
 
     max-height: 2.5rem;
     border-radius: 10px;
     border: none;
   }
+
   .desktop-shop button:hover, desktop-shop button:active {
     box-shadow: var(--hover-shadow);
     background-color: var(--red);
   }
+
   .mobile-menu, .mobile-shop, #nav-btn-mobile {
     display: none;
   }
-
-  /* header logo desktop layout */
-
 }
-
-/* ----- */
-/* Icons */
-/* ----- */
-.text-logo {
-  min-width: 86px;
-  max-width: 128px;
-}
-
-
+/* ------------------------------------- */
 /* ----- Lava Pad Icon Animations ------ */
+
+/* Navigation Logo Styling */
+.text-logo {
+  margin: 20px 0 0 0;
+  min-width: 86px;
+  max-width: 228px;
+}
+.text-logo:hover {
+  filter: blur(1px);
+}
+/* Hero Icon Styling */
 .hero-tile-icon {
+  max-width: 20rem;
+  margin: 2rem;
 }
 
 .mountain {
   fill: var(--black);
 }
 .river {
-  /* for animation, manipulate fill gradient with keyframe */
   fill: var(--black);
   animation-name: river;
   animation-duration: 4s;
   animation-fill-mode: forwards;
   animation-delay: 2.25s;
-  transition: 
 }
 .logo-circle {
   animation-name: dot;
@@ -300,9 +314,8 @@
 
 }
 
-/* also add navigation icons after this is starting to work*/
+/* Keyframes seemed to be the only way to get this to animate on page load without JS. JS will be used in 262 to get rid of keyframes */
 /* Volcano animation */
-/* Keyframe crazytown */
 @keyframes dot {
   0% {
     transform-origin: center;
